# CPokeRpg

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: component.c.DAED50CFED394DC6.idx  component_array.c.718FD1D4362E2369.idx  component_array.h.AABEB2597B20573E.idx  component_manager.c.8F8C947E5383CBAB.idx  component_manager.h.3A9F6860F3FC3158.idx  components.h.A9FAF8FCE1EBFAA8.idx  constants.h.17AF06D44C0072B2.idx  hash_map.c.EA8C39C48545DA3D.idx  hash_map.h.D29084DEB5FC2F59.idx  iterator.h.2ACC8FD496E80BFA.idx  main.c.59926BA122B56558.idx  scene.c.1323A7F969A4B2F9.idx  scene.h.80975D7BED492220.idx  scene_fire_arena.c.24B9F3F8578112D8.idx  scene_hospital.c.A605EDDCBBE1EEB9.idx  scene_house.c.985CA55A0A6D639F.idx  scene_id.h.08AC33BC7E67ECF1.idx  scene_manager.c.075E7DFE9B61DF39.idx  scene_plant_arena.c.5A6BFFA2E477A981.idx  scene_title_screen.c.689013F7A9903CB1.idx  scene_water_arena.c.B1128BAAF189DDC6.idx  scene_world.c.2CC1734DAFDABCAE.idx  types.h.D52E44C7D9B4B2F6.idx  util.c.AE26AAFBEF490772.idx  util.h.116103AA6C15DD79.idx  vector.c.8AA53CB06176E79A.idx  vector.h.999E02A4E6079E24.idx
src/: constants.h  main.c  main.cpp
src/ecs/: component.c  component_array.c  component_array.h  component_manager.c  component_manager.h  components.c  components.h  ecs_instance.c  ecs_instance.h  ecs_manager.c  ecs_manager.h  entity_manager.c  entity_manager.h  system_manager.c  system_manager.h
src/scene/: scene.c  scene.h  scene_fire_arena.c  scene_fire_arena.cpp  scene_fire_arena.h  scene_hospital.c  scene_hospital.cpp  scene_hospital.h  scene_house.c  scene_house.cpp  scene_house.h  scene_id.h  scene_manager.c  scene_manager.cpp  scene_plant_arena.c  scene_plant_arena.cpp  scene_plant_arena.h  scene_test.c  scene_test.h  scene_title_screen.c  scene_title_screen.cpp  scene_title_screen.h  scene_water_arena.c  scene_water_arena.cpp  scene_water_arena.h  scene_world.c  scene_world.cpp  scene_world.h
src/test/: mstringtest.h
src/util/: asset_pool.cpp  asset_pool.h  camera.c  camera.h  entity_queue.c  entity_queue.h  fontid.h  hash_map.c  hash_map.h  hash_set.c  hash_set.h  image.c  image.cpp  image.h  iterator.h  mstring.c  mstring.h  sceneid.h  texture_pool.c  texture_pool.h  types.h  util.c  util.cpp  util.h  vec_iterator.h  vector.c  vector.h  vector_entity.c  vector_entity.h
